--- a/config-client/config-client-dev.yml
+++ b/config-client/config-client-dev.yml
@@ -1,1 +1,11 @@
-
+    
+server: 
+  port: 8201 
+spring:
+  profiles: dev
+  application: 
+    name: config-client
+eureka: 
+  client: 
+    service-url: 
+      defaultZone: http://localhost:7001/eureka/   
